--- a/style.css
+++ b/style.css
@@ -7,23 +7,22 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #000000;
-    color: #800000;
-    max-width: 960px;
+    background-color: #000000; 
+    color: #800000; 
     margin: 0 auto;
-    padding: 20px;
 }
 
 
 #header {
-    background-color: #800000;
-    color: white;
+    background-color: #800000; 
+    color: white;  
     padding: 15px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    position: relative;
+    position: fixed;
+    top: 0;
 }
 
 .logo {
@@ -196,9 +195,10 @@ button:hover {
 
 #footer {
     margin-top: 50px;
-    text-align: center;
-    background-color: #800000;
-    color: white;
+    background-color: #333;
+    background-color: #333;
     padding: 20px;
     width: 100%;
+    position: relative;
+
 }
