--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ body {
     color: #800000; 
     margin: 0 auto;
 }
-
-
+main {
+    padding-top: 5%;
+    max-width: 960px;
+    margin: 0 auto;
+}
 #header {
     background-color: #800000; 
     color: white;  
@@ -202,3 +205,4 @@ button:hover {
     position: relative;
 
 }
+
