--- a/style.css
+++ b/style.css
@@ -31,9 +31,16 @@ main {
 .logo {
     width: 80px;
     height: 80px;
+    background-color: #fff;
     border-radius: 50%;
-    object-fit: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #007BFF;
+    font-size: 20px;
     margin-right: 10px;
+    float: left;
 }
 
 .site-name {
@@ -207,6 +214,7 @@ button:hover {
     position: relative;
 
 }
+
 
 
 
