--- a/style.css
+++ b/style.css
@@ -200,7 +200,11 @@ button {
     cursor: pointer;
     font-size: 16px;
 }
-
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
 button:hover {
     background-color: #600000;
 }
@@ -214,6 +218,7 @@ button:hover {
     position: relative;
 
 }
+
 
 
 
